# eva-core

./: .eva-housekeeping.json  .eva-manifest.json  .eva-memory.json  .eva-pod.yaml  .gitignore  .pre-commit-config.yaml  README.md  STATUS.md  eslint.config.mjs  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  vitest.config.ts
.eva/: .eva-workspace.schema.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  quality-gate.yml
.hypothesis/constants/: 05a897ff96a4a132  06176638abe28b62  0caa1bcb6e83615a  1865f3f3150c4091  35a0f1974d6d28dd  4f2cba7716b77b3f  50462a8858e1bb2e  5bf2f2b0d5c41722  64f53fa6554e274c  731006fd9e5bf2ee  9b9880e0b0fa182f  a95acfa94bba1a89  a975230c8704808d  b5337f5e909090b5  b62b8cf38d663bb8  cc07dfe975aab29a  cf56a63ab347d667  dfb65ccdf3857a82  efe1b45dfacbaf55
.hypothesis/tmp/: tmp1w44jmt6  tmp3iwejb08  tmp5c0_kk22  tmp7d1lglyo  tmp9vhmtm21  tmpe5jogm4h  tmplsuvv3do  tmpvxxae2h2
api/repositories/: index.html
backups/mandatory-folder-cleanup/20251216-220457/: provenance-manifest.json
backups/mandatory-folder-cleanup/20251216-220457/files/: .coverage  QUALITY-GATE-REPORT.md
coverage/: index.html  lcov.info
coverage/eva-core/: eslint.config.mjs.html  index.html  vitest.config.ts.html
coverage/eva-core/src/: index.html  index.ts.html
coverage/eva-core/src/__tests__/: events.test.ts.html  index.html  orchestrator-exception.test.ts.html  orchestrator-nonerror-exception.test.ts.html  orchestrator-success-no-telemetry.test.ts.html  orchestrator-telemetry.test.ts.html  orchestrator.test.ts.html  plan.test.ts.html  (+1 more)
coverage/lcov-report/: index.html
coverage/lcov-report/eva-core/: eslint.config.mjs.html  index.html  vitest.config.ts.html
coverage/lcov-report/src/: index.html  index.ts.html
coverage/src/: index.html  index.ts.html
coverage/src/domain/: events.ts.html  ids.ts.html  index.html  messages.ts.html  plan.ts.html
coverage/src/examples/: index.html  minimal.ts.html
coverage/src/runtime/: index.html  orchestrator.ts.html
coverage/src/spi/: embeddings.ts.html  index.html  llm.ts.html  storage.ts.html  telemetry.ts.html  vector-store.ts.html
coverage/src/util/: index.html  result.ts.html
development/contributing/: index.html
docs/: SPECIFICATION.md  index.md
docs/api/: entities.md  events.md  repositories.md  value-objects.md
docs/development/: contributing.md  testing.md
docs/getting-started/: installation.md  quick-start.md
docs/usage/: domain-events.md  entities.md  repositories.md  value-objects.md
getting-started/quick-start/: index.html
search/: search_index.json
site/: index.html
site/api/events/: index.html
site/getting-started/installation/: index.html
site/usage/repositories/: index.html
src/: index.ts
src/__tests__/: app.schema.test.ts  events.test.ts  ids.test.ts  orchestrator-exception.test.ts  orchestrator-nonerror-exception.test.ts  orchestrator-success-no-telemetry.test.ts  orchestrator-telemetry.test.ts  orchestrator.test.ts  plan.test.ts  result.test.ts  spi.test.ts
src/database/: cosmos-client.ts  cosmos-config.ts  index.ts
src/database/repositories/: analytics-repository.ts  conversation-repository.ts  document-repository.ts  index.ts
src/domain/: app.schema.ts  app.ts  events.ts  ids.ts  messages.ts  plan.ts
src/eva_core/: __init__.py
src/eva_core/domain/: __init__.py
src/examples/: minimal.ts
src/runtime/: orchestrator.ts
src/spi/: llm.ts  storage.ts  telemetry.ts  vector-store.ts
src/util/: result.ts
tests/: test_business_rules.py  test_coverage.py  test_domain_events.py  test_performance.py  test_repositories.py
tests/test_entities/: __init__.py  test_all_entities.py  test_user.py
tests/test_value_objects/: __init__.py  test_email.py  test_phone_number.py  test_sin.py
usage/entities/: index.html
(+113 files in other folders)
